minikube/kong_postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-proxy
spec:
  type: NodePort
  ports:
  - name: kong-proxy
    port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: kong

---
apiVersion: v1
kind: Service
metadata:
  name: kong-proxy-ssl
spec:
  type: NodePort
  ports:
  - name: kong-proxy-ssl
    port: 8443
    targetPort: 8443
    protocol: TCP
  selector:
    app: kong

---
apiVersion: v1
kind: Service
metadata:
  name: kong-admin
spec:
  type: NodePort
  ports:
  - name: kong-admin
    port: 8001
    targetPort: 8001
    protocol: TCP
  selector:
    app: kong

---
apiVersion: v1
kind: Service
metadata:
  name: kong-admin-ssl
spec:
  type: NodePort
  ports:
  - name: kong-admin-ssl
    port: 8444
    targetPort: 8444
    protocol: TCP
  selector:
    app: kong

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kong
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: kong
        app: kong
    spec:
      volumes:
      # - name: nginx-kong
      #   configMap:
      #     defaultMode: 511
      #     name: nginx-kong
      - name: kong-tls
        secret:
          secretName: kong-tls
          defaultMode: 511
      containers:
      - name: kong
        image: kong:1.0.3-centos
        ports:
        - name: admin
          containerPort: 8001
          protocol: TCP
        - name: proxy
          containerPort: 8000
          protocol: TCP
        - name: proxy-ssl
          containerPort: 8443
          protocol: TCP
        - name: admin-ssl
          containerPort: 8444
          protocol: TCP
        volumeMounts:
        - name: kong-tls
          mountPath: /tmp/ssl
        # - name: nginx-kong
        #   mountPath: "/usr/local/kong/nginx-kong.conf"
        #   subPath: nginx-kong.conf
